--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
         ul li {
             margin: 10px 0;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 15px 0;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 15px;
+            margin: 10px 0;
+            color: white;
+            background: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .button:hover {
+            background: #0056b3;
+        }
 
         /* Footer Styles */
         footer {
@@ -108,6 +126,7 @@
             <li><a href="#methodology">Methodology</a></li>
             <li><a href="#case-studies">Case Studies</a></li>
             <li><a href="#results">Results</a></li>
+            <li><a href="#demo">Demo</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -115,38 +134,39 @@
     <main>
         <section id="overview">
             <h2>Project Overview</h2>
-            <p>URBAN-AI leverages cutting-edge artificial intelligence tools such as GPT-4V and Grounding DINO to create a comprehensive global resource cadastre. Our goal is to advance circular economy practices by addressing the challenge of insufficient building data, enabling sustainable and efficient urban development.</p>
-            <p>By integrating AI-powered analysis of building facades using street-level imagery, URBAN-AI offers insights into material inventorying, resource allocation, and urban planning strategies, specifically tailored for diverse urban environments around the world.</p>
+            <img src="path/to/overview-image.jpg" alt="Overview image of URBAN-AI Project">
+            <p>URBAN-AI leverages cutting-edge artificial intelligence tools such as GPT-4V and Grounding DINO to create a comprehensive global resource cadastre...</p>
         </section>
 
         <section id="methodology">
             <h2>Methodology</h2>
-            <p>URBAN-AI utilizes a workflow combining advanced AI models for urban analysis:</p>
+            <img src="path/to/methodology-image.jpg" alt="Methodology workflow">
+            <p>URBAN-AI utilizes a workflow combining advanced AI models for urban analysis...</p>
             <ul>
                 <li><strong>Grounding DINO:</strong> Used for zero-shot segmentation of building features from street-level imagery.</li>
                 <li><strong>GPT-4V:</strong> Provides detailed analyses, generating insights on architectural style, material types, and building conditions.</li>
-                <li>Data sources include publicly available repositories such as Google Street View and Mapillary, ensuring accessibility even in regions with limited data.</li>
             </ul>
-            <p>This methodology provides a scalable and automated approach to generate building-specific insights, forming the basis for a comprehensive resource cadastre that informs policy, economic planning, and sustainability efforts.</p>
         </section>
 
         <section id="case-studies">
             <h2>Case Studies</h2>
-            <p>URBAN-AI was tested across six diverse cities to address specific urban challenges:</p>
-            <ul>
-                <li><strong>Zurich:</strong> Focus on historical conservation, with analysis of heritage value and architectural styles.</li>
-                <li><strong>San Francisco:</strong> Assessment of seismic vulnerability in multi-story buildings.</li>
-                <li><strong>Melbourne:</strong> Examination of energy efficiency in older building structures.</li>
-                <li><strong>Mumbai:</strong> Analysis of urban morphology and high-density residential areas.</li>
-                <li><strong>Cape Town:</strong> Identification of greening potential through green facades and roofs.</li>
-                <li><strong>Rio de Janeiro:</strong> Evaluation of flood vulnerability in various architectural styles.</li>
-            </ul>
+            <img src="path/to/case-studies-image.jpg" alt="Case studies across various cities">
+            <p>URBAN-AI was tested across six diverse cities to address specific urban challenges...</p>
         </section>
 
         <section id="results">
             <h2>Results and Insights</h2>
-            <p>The implementation of URBAN-AI demonstrates its effectiveness in generating detailed building material density maps and resource inventories. This data supports urban mining, circular construction initiatives, and policy development for sustainable cities.</p>
-            <p>Our results highlight the potential for AI-driven methodologies to enhance traditional urban planning approaches, providing cost-effective, scalable solutions for stakeholders worldwide.</p>
+            <img src="path/to/results-image.jpg" alt="Results and data insights">
+            <p>The implementation of URBAN-AI demonstrates its effectiveness in generating detailed building material density maps...</p>
+        </section>
+
+        <section id="demo">
+            <h2>Demo and Downloads</h2>
+            <p>Explore the functionality of URBAN-AI:</p>
+            <a href="path/to/demo-link" class="button">View Demo</a>
+            <p>Download the project resources:</p>
+            <a href="path/to/dataset.zip" class="button">Download Dataset</a>
+            <a href="path/to/code-repository" class="button">Download Code</a>
         </section>
 
         <section id="contact">
