--- a/index.html
+++ b/index.html
@@ -3,181 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URBAN-AI: Circular Economy and Sustainability</title>
+    <title>Urban AI Project</title>
     <style>
-        /* General Styles */
         body {
+            margin: 0;
+            overflow: hidden;
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-            background: #f4f4f4;
-        }
-        header, nav, main, footer {
-            padding: 20px;
-            margin: 0 auto;
-            max-width: 1200px;
-        }
-        header {
-            background: #007BFF;
-            color: white;
-            padding: 40px 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        header p {
-            font-size: 1.2rem;
+            background: #1a1a1a;
+            color: #f0e68c;
         }
 
-        /* Navigation Styles */
-        nav {
-            margin: 20px 0;
-            background: #f4f4f4;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            color: #0056b3;
-        }
-
-        /* Section Styles */
-        section {
-            background: white;
-            padding: 20px;
-            margin: 20px 0;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-        section h2 {
-            margin-top: 0;
-            color: #007BFF;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        ul li {
-            margin: 10px 0;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin: 15px 0;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 15px;
-            margin: 10px 0;
-            color: white;
-            background: #007BFF;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-        .button:hover {
-            background: #0056b3;
-        }
-
-        /* Footer Styles */
-        footer {
-            text-align: center;
-            padding: 10px 20px;
-            background: #007BFF;
-            color: white;
-            margin-top: 20px;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            nav ul {
-                flex-direction: column;
-                align-items: center;
-            }
-            nav ul li {
-                margin: 10px 0;
-            }
+        .info-panel {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 15px;
+            border-radius: 8px;
+            color: #fff;
+            font-size: 14px;
+            max-width: 300px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>URBAN-AI: Advancing Circular Economy and Sustainability</h1>
-        <p>A Global Resource Cadastre for Sustainable Urban Planning</p>
-    </header>
+    <div class="info-panel">
+        <h3>Urban AI Project</h3>
+        <p>Click on any point to view building information.</p>
+    </div>
 
-    <nav>
-        <ul>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#methodology">Methodology</a></li>
-            <li><a href="#case-studies">Case Studies</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#demo">Demo</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script>
+        // Scene setup
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-    <main>
-        <section id="overview">
-            <h2>Project Overview</h2>
-            <img src="path/to/overview-image.jpg" alt="Overview image of URBAN-AI Project">
-            <p>URBAN-AI leverages cutting-edge artificial intelligence tools such as GPT-4V and Grounding DINO to create a comprehensive global resource cadastre...</p>
-        </section>
+        // Create the globe
+        const geometry = new THREE.SphereGeometry(5, 50, 50);
+        const material = new THREE.MeshBasicMaterial({
+            map: new THREE.TextureLoader().load('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Earthmap1000x500compac.jpg/800px-Earthmap1000x500compac.jpg'), // Texture of Earth
+            wireframe: false
+        });
+        const globe = new THREE.Mesh(geometry, material);
+        scene.add(globe);
 
-        <section id="methodology">
-            <h2>Methodology</h2>
-            <img src="path/to/methodology-image.jpg" alt="Methodology workflow">
-            <p>URBAN-AI utilizes a workflow combining advanced AI models for urban analysis...</p>
-            <ul>
-                <li><strong>Grounding DINO:</strong> Used for zero-shot segmentation of building features from street-level imagery.</li>
-                <li><strong>GPT-4V:</strong> Provides detailed analyses, generating insights on architectural style, material types, and building conditions.</li>
-            </ul>
-        </section>
+        // Add points for cities
+        const cities = [
+            { name: "City 1", lat: 40.7128, lon: -74.0060 },
+            { name: "City 2", lat: 34.0522, lon: -118.2437 },
+            { name: "City 3", lat: 51.5074, lon: -0.1278 },
+            { name: "City 4", lat: 48.8566, lon: 2.3522 },
+        ];
 
-        <section id="case-studies">
-            <h2>Case Studies</h2>
-            <img src="path/to/case-studies-image.jpg" alt="Case studies across various cities">
-            <p>URBAN-AI was tested across six diverse cities to address specific urban challenges...</p>
-        </section>
+        const addCityPoint = (lat, lon, name) => {
+            const radius = 5;
+            const phi = (90 - lat) * (Math.PI / 180);
+            const theta = (lon + 180) * (Math.PI / 180);
 
-        <section id="results">
-            <h2>Results and Insights</h2>
-            <img src="path/to/results-image.jpg" alt="Results and data insights">
-            <p>The implementation of URBAN-AI demonstrates its effectiveness in generating detailed building material density maps...</p>
-        </section>
+            const x = -radius * Math.sin(phi) * Math.cos(theta);
+            const y = radius * Math.cos(phi);
+            const z = radius * Math.sin(phi) * Math.sin(theta);
 
-        <section id="demo">
-            <h2>Demo and Downloads</h2>
-            <p>Explore the functionality of URBAN-AI:</p>
-            <a href="path/to/demo-link" class="button">View Demo</a>
-            <p>Download the project resources:</p>
-            <a href="path/to/dataset.zip" class="button">Download Dataset</a>
-            <a href="path/to/code-repository" class="button">Download Code</a>
-        </section>
+            const pointGeometry = new THREE.SphereGeometry(0.1, 10, 10);
+            const pointMaterial = new THREE.MeshBasicMaterial({ color: 0xffff00 });
+            const point = new THREE.Mesh(pointGeometry, pointMaterial);
+            point.position.set(x, y, z);
+            point.userData = { name };
+            scene.add(point);
 
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>For more information or collaboration inquiries, please reach out:</p>
-            <p>Email: <a href="mailto:draghu@ethz.ch">draghu@ethz.ch</a></p>
-        </section>
-    </main>
+            point.callback = () => {
+                alert(`You clicked on: ${name}`);
+            };
+        };
 
-    <footer>
-        <p>&copy; 2024 URBAN-AI Project. All rights reserved.</p>
-    </footer>
+        cities.forEach(city => addCityPoint(city.lat, city.lon, city.name));
+
+        // Mouse click detection
+        const raycaster = new THREE.Raycaster();
+        const mouse = new THREE.Vector2();
+
+        window.addEventListener('click', (event) => {
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            const intersects = raycaster.intersectObjects(scene.children);
+            if (intersects.length > 0) {
+                const selectedObject = intersects[0].object;
+                if (selectedObject.callback) selectedObject.callback();
+            }
+        });
+
+        // Camera setup
+        camera.position.z = 10;
+
+        // Animation loop
+        const animate = function () {
+            requestAnimationFrame(animate);
+
+            globe.rotation.y += 0.001;
+
+            renderer.render(scene, camera);
+        };
+
+        animate();
+
+        // Handle resize
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    </script>
 </body>
 </html>
