--- a/index.html
+++ b/index.html
@@ -13,16 +13,31 @@
             color: #f0e68c;
         }
 
+        h3, p {
+            margin: 0;
+            padding: 0;
+            color: #f0e68c;
+        }
+
         .info-panel {
             position: absolute;
             top: 20px;
             left: 20px;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.85);
             padding: 15px;
             border-radius: 8px;
-            color: #fff;
+            color: #f0e68c;
             font-size: 14px;
-            max-width: 300px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        a {
+            color: #f0e68c;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -31,93 +46,5 @@
         <h3>Urban AI Project</h3>
         <p>Click on any point to view building information.</p>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script>
-        // Scene setup
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-
-        // Create the globe
-        const geometry = new THREE.SphereGeometry(5, 50, 50);
-        const material = new THREE.MeshBasicMaterial({
-            map: new THREE.TextureLoader().load('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Earthmap1000x500compac.jpg/800px-Earthmap1000x500compac.jpg'), // Texture of Earth
-            wireframe: false
-        });
-        const globe = new THREE.Mesh(geometry, material);
-        scene.add(globe);
-
-        // Add points for cities
-        const cities = [
-            { name: "City 1", lat: 40.7128, lon: -74.0060 },
-            { name: "City 2", lat: 34.0522, lon: -118.2437 },
-            { name: "City 3", lat: 51.5074, lon: -0.1278 },
-            { name: "City 4", lat: 48.8566, lon: 2.3522 },
-        ];
-
-        const addCityPoint = (lat, lon, name) => {
-            const radius = 5;
-            const phi = (90 - lat) * (Math.PI / 180);
-            const theta = (lon + 180) * (Math.PI / 180);
-
-            const x = -radius * Math.sin(phi) * Math.cos(theta);
-            const y = radius * Math.cos(phi);
-            const z = radius * Math.sin(phi) * Math.sin(theta);
-
-            const pointGeometry = new THREE.SphereGeometry(0.1, 10, 10);
-            const pointMaterial = new THREE.MeshBasicMaterial({ color: 0xffff00 });
-            const point = new THREE.Mesh(pointGeometry, pointMaterial);
-            point.position.set(x, y, z);
-            point.userData = { name };
-            scene.add(point);
-
-            point.callback = () => {
-                alert(`You clicked on: ${name}`);
-            };
-        };
-
-        cities.forEach(city => addCityPoint(city.lat, city.lon, city.name));
-
-        // Mouse click detection
-        const raycaster = new THREE.Raycaster();
-        const mouse = new THREE.Vector2();
-
-        window.addEventListener('click', (event) => {
-            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-
-            raycaster.setFromCamera(mouse, camera);
-
-            const intersects = raycaster.intersectObjects(scene.children);
-            if (intersects.length > 0) {
-                const selectedObject = intersects[0].object;
-                if (selectedObject.callback) selectedObject.callback();
-            }
-        });
-
-        // Camera setup
-        camera.position.z = 10;
-
-        // Animation loop
-        const animate = function () {
-            requestAnimationFrame(animate);
-
-            globe.rotation.y += 0.001;
-
-            renderer.render(scene, camera);
-        };
-
-        animate();
-
-        // Handle resize
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        });
-    </script>
 </body>
 </html>
