--- a/index.html
+++ b/index.html
@@ -46,5 +46,45 @@
         <h3>Urban AI Project</h3>
         <p>Click on any point to view building information.</p>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script>
+        // Scene setup
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        // Create the globe
+        const geometry = new THREE.SphereGeometry(5, 50, 50);
+        const material = new THREE.MeshBasicMaterial({
+            map: new THREE.TextureLoader().load('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Earthmap1000x500compac.jpg/800px-Earthmap1000x500compac.jpg'), // Texture of Earth
+            wireframe: false
+        });
+        const globe = new THREE.Mesh(geometry, material);
+        scene.add(globe);
+
+        // Camera setup
+        camera.position.z = 10;
+
+        // Animation loop
+        const animate = function () {
+            requestAnimationFrame(animate);
+
+            globe.rotation.y += 0.001;
+
+            renderer.render(scene, camera);
+        };
+
+        animate();
+
+        // Handle resize
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    </script>
 </body>
 </html>
