--- a/index.html
+++ b/index.html
@@ -52,18 +52,22 @@
         // Scene setup
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         // Create the globe
         const geometry = new THREE.SphereGeometry(5, 50, 50);
         const material = new THREE.MeshBasicMaterial({
-            map: new THREE.TextureLoader().load('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Earthmap1000x500compac.jpg/800px-Earthmap1000x500compac.jpg'), // Texture of Earth
-            wireframe: false
+            map: new THREE.TextureLoader().load('https://raw.githubusercontent.com/planetarysoftware/webmap/master/images/earthmap1k.jpg'), // Updated texture
         });
         const globe = new THREE.Mesh(geometry, material);
         scene.add(globe);
+
+        // Lighting (Optional for better visuals)
+        const light = new THREE.PointLight(0xffffff, 1);
+        light.position.set(10, 10, 10);
+        scene.add(light);
 
         // Camera setup
         camera.position.z = 10;
@@ -71,9 +75,7 @@
         // Animation loop
         const animate = function () {
             requestAnimationFrame(animate);
-
-            globe.rotation.y += 0.001;
-
+            globe.rotation.y += 0.002; // Slightly faster rotation
             renderer.render(scene, camera);
         };
 
