--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>Click on any point to view building information.</p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
         // Scene setup
         const scene = new THREE.Scene();
@@ -59,15 +59,17 @@
         // Create the globe
         const geometry = new THREE.SphereGeometry(5, 50, 50);
         const material = new THREE.MeshBasicMaterial({
-            map: new THREE.TextureLoader().load('https://raw.githubusercontent.com/planetarysoftware/webmap/master/images/earthmap1k.jpg'), // Updated texture
+            color: 0x4444ff, // Fallback color
+            map: new THREE.TextureLoader().load(
+                'https://raw.githubusercontent.com/planetarysoftware/webmap/master/images/earthmap1k.jpg',
+                () => console.log('Texture loaded'),
+                undefined,
+                () => console.error('Failed to load texture')
+            )
         });
+
         const globe = new THREE.Mesh(geometry, material);
         scene.add(globe);
-
-        // Lighting (Optional for better visuals)
-        const light = new THREE.PointLight(0xffffff, 1);
-        light.position.set(10, 10, 10);
-        scene.add(light);
 
         // Camera setup
         camera.position.z = 10;
@@ -75,13 +77,13 @@
         // Animation loop
         const animate = function () {
             requestAnimationFrame(animate);
-            globe.rotation.y += 0.002; // Slightly faster rotation
+            globe.rotation.y += 0.002;
             renderer.render(scene, camera);
         };
 
         animate();
 
-        // Handle resize
+        // Handle window resize
         window.addEventListener('resize', () => {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
