--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urban AI Project</title>
+    <meta http-equiv="refresh" content="5; url=https://www.deepikaraghu.com">
     <style>
         body {
             margin: 0;
@@ -44,7 +45,7 @@
 <body>
     <div class="info-panel">
         <h3>Urban AI Project</h3>
-        <p>Click on any point to view building information.</p>
+        <p>You are being redirected to our new site. If you are not redirected automatically, <a href="https://www.deepikaraghu.com">click here</a>.</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
